# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
staticfiles/css/: main.css
task_manager/: json_loader.py  mixins.py  settings.py  test_setup.py  urls.py  views.py
task_manager/fixtures/: create.json  create_task.json  label.json  task.json  update.json  user.json
task_manager/fixtures/label/: create.json  label.json  update.json
task_manager/fixtures/status/: create.json  status.json  update.json
task_manager/fixtures/task/: create.json  task.json  update.json
task_manager/fixtures/user/: user.json
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py  0003_alter_label_name.py  0004_alter_label_options.py  0005_alter_label_options.py  0006_alter_label_options.py
task_manager/labels/tests/: test_create.py  test_delete.py  test_setup.py  test_update.py  test_view.py
task_manager/static/css/: navbar.css
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_name.py
task_manager/statuses/tests/: test_create.py  test_delete.py  test_setup.py  test_update.py  test_view.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/templates/: base.html  footer.html  form.html  index.html  login_form.html  navbar.html
task_manager/users/: forms.py  models.py  urls.py  views.py
(+41 files in other folders)
