[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "some task manager"
authors = ["Anton Georgievsky <123451311+jespy666@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
