[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "some task manager"
authors = ["Anton Georgievsky <123451311+jespy666@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "task_manager"}
]

[tool.poetry.dependencies]
python = "^3.10.6"
django = "^4.2.5"
django-bootstrap4 = "^23.2"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
